--- a/PlateformeU.CSharp.csproj
+++ b/PlateformeU.CSharp.csproj
@@ -84,6 +84,10 @@
     <Compile Include="Assets\SampleScenes\Scripts\ParticleSceneControls.cs" />
     <Compile Include="Assets\SampleScenes\Scripts\PlaceTargetWithMouse.cs" />
     <Compile Include="Assets\SampleScenes\Scripts\SlowMoButton.cs" />
+    <Compile Include="Assets\script\SetSortingLayer.cs" />
+    <Compile Include="Assets\script\gunFire.cs" />
+    <Compile Include="Assets\script\gunRotation.cs" />
+    <Compile Include="Assets\script\moveBullet.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\SampleScenes\Shaders\Skybox-Procedural.shader" />
