--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -60,6 +60,7 @@
      <Compile Include="Assets\script\gunRotation.cs" />
      <Compile Include="Assets\script\moveBullet.cs" />
      <Compile Include="Assets\script\pauseScript.cs" />
+     <Compile Include="Assets\time.cs" />
      <None Include="Assets\Standard Assets\Effects\GlassRefraction\Shaders\GlassStainedBumpDistort.shader" />
      <None Include="Assets\Standard Assets\Effects\ImageEffects\Shaders\_BloomAndFlares\BlendOneOne.shader" />
      <None Include="Assets\Standard Assets\Effects\ImageEffects\Shaders\NoiseEffectShaderRGB.shader" />
